# Haste

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
install/cpp_pubsub/share/cpp_pubsub/: package.sh
install/cpp_srvcli/lib/cpp_srvcli/: client  server
install/cpp_srvcli/share/cpp_srvcli/: local_setup.sh  package.sh
install/custom_interfaces/include/custom_interfaces/custom_interfaces/srv/: scan_i2_cconnect.hpp  scan_twi.h
install/custom_interfaces/include/custom_interfaces/custom_interfaces/srv/detail/: scan_i2_cconnect__rosidl_typesupport_fastrtps_c.h  scan_i2_cconnect__rosidl_typesupport_introspection_c.h  scan_i2_cconnect__rosidl_typesupport_introspection_cpp.hpp  scan_i2_cconnect__type_support.c  scan_twi__rosidl_typesupport_introspection_cpp.hpp  scan_twi__struct.hpp
install/custom_interfaces/share/ament_index/resource_index/parent_prefix_path/: custom_interfaces
install/custom_interfaces/share/custom_interfaces/: local_setup.sh  package.sh
install/custom_interfaces/share/custom_interfaces/cmake/: rosidl_cmake-extras.cmake
install/custom_interfaces/share/custom_interfaces/srv/: ScanTwi.idl
install/my_custom_msgs/share/my_custom_msgs/: local_setup.sh  package.sh  package.zsh
install/my_package/lib/my_package/: scan_Twi_Client  scan_Twi_Server
install/my_package/share/my_package/: package.sh
install/turtlesim/lib/turtlesim/: mimic  turtle_teleop_key
install/turtlesim/share/turtlesim/: package.sh
install/tutorial_interfaces/share/tutorial_interfaces/: package.sh
log/: latest_build
src/: I2C_Scan_print.c
src/Terminal/: CMakeLists.txt  package.xml
src/Terminal/src/: Haste_Terminal.cpp
src/computer_input/: CMakeLists.txt  package.xml
src/computer_input/src/: omni_inputs.cpp
src/control_teste/: CMakeLists.txt  package.xml
src/control_teste/src/: teste1.cpp
src/cpp_pubsub/: CMakeLists.txt
src/cpp_pubsub/src/: command_pub_function.cpp  publisher_member_function.cpp  subscriber_member_function.cpp
src/cpp_srvcli/: CMakeLists.txt  package.xml
src/cpp_srvcli/src/: add_two_ints_server.cpp
src/custom_interfaces/: CMakeLists.txt  package.xml
src/haste_control/: CMakeLists.txt  package.xml
src/haste_control/src/: line_follow.cpp  omni_control.cpp  simple_motor_control.cpp
src/haste_manager/: CMakeLists.txt  package.xml
src/haste_manager/params/: params
src/haste_manager/src/: node_manager.cpp
src/haste_modules/: CMakeLists.txt  package.xml
src/haste_modules/src/: type1_node.cpp  type2_node.cpp  type31_node.cpp  type4_node.cpp
src/i2c_scan/: CMakeLists.txt  package.xml
src/i2c_scan/src/: Request.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/cpp_pubsub/lib/cpp_pubsub/: command_pub  listener  talker
src/install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh
src/install/custom_interfaces/share/custom_interfaces/: package.sh
src/install/i2c_scan/lib/i2c_scan/: i2c_Scan_Print
src/install/i2c_scan/share/i2c_scan/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/my_custom_msgs/share/my_custom_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml
src/install/my_library/include/my_library/: my_library.hpp
src/install/my_library/share/my_library/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/my_library/share/my_library/cmake/: ament_cmake_export_targets-extras.cmake
src/install/my_package/lib/my_package/: scan_Twi_Client  scan_Twi_Server
src/install/my_package/share/my_package/: local_setup.sh  package.sh
src/install/simple_motor_control/share/simple_motor_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/teste/lib/teste/: intarrayreceive  intarraysend  teste
src/install/teste/share/teste/: local_setup.sh  package.sh
src/install/turtlesim/lib/turtlesim/: mimic  turtle_teleop_key
src/install/turtlesim/share/turtlesim/: package.sh
src/install/tutorial_interfaces/share/tutorial_interfaces/: local_setup.sh  package.sh  package.xml
src/install/type1_node/lib/type1_node/: type1_node
src/install/type1_node/share/type1_node/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/type31_node/lib/type31_node/: type31_node
src/install/type31_node/share/type31_node/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/type4_node/share/type4_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/type4_node/share/type4_node/cmake/: type4_nodeConfig.cmake
src/log/: latest_build
src/my_custom_msgs/: CMakeLists.txt
src/my_custom_msgs/msg/: MycustomMessage.msg
src/my_library/: CMakeLists.txt
src/my_library/include/my_library/: my_library.hpp
src/my_library/src/: my_library.cpp
src/my_package/: CMakeLists.txt
src/my_package/src/: Scan_Twi_Client.cpp  Scan_Twi_Server.cpp  client.cpp  service.cpp
src/simple_motor_control/: CMakeLists.txt  package.xml
src/teste/: CMakeLists.txt  package.xml
src/teste/src/: intarrayreceive.cpp  intarraysend.cpp  teste.cpp
src/type1_node/: CMakeLists.txt  package.xml
src/type1_node/src/: type1_node.cpp
src/type31_node/: CMakeLists.txt  package.xml
src/type31_node/src/: type31_node.cpp
src/type4_node/: CMakeLists.txt  package.xml
(+8 files in other folders)
